2012-06-20  Vanessa Gil <vanessa.gil@artica.es>

	* operation/tree.php: Fixed bug: Missing text in tree view title.

2012-06-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_filemanager.php: cleaned source code style.
	
	* include/functions.php: added function "copy_dir" for use in the
	bug #3527247.

2012-06-20  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/setup/setup_visuals.php: Fixed bug: Inside Visual styles menu 
	there is an option "Timestamp or time comparation" which has not a selected
	value by default.

2012-06-20 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* index.php: Cleaned source code.

2012-06-20  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/agentes/module_manager.php
	  operation/agentes/estado_agente.php
	  operation/agentes/status_monitor: Changed interval format.

2012-06-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_ui.php: work around into the function
	"ui_print_truncate_text" because the PHP function "mb_strimwidth" is
	a buggy function (overwrite the strings with only the string for
	concat), now the concat is out this function. And in this
	function "ui_print_truncate_text" added the posibility to set the
	string to truncate without "span" html tag.
	 
	* operation/agentes/ver_agente.php,
	godmode/agentes/configurar_agente.php: used the new form to call the
	"ui_print_truncate_text" without "span" tag because there are some
	css skins have problems with the "span" tag in the tittle header.

2012-06-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions_agents.php
	operation/agentes/estado_agente.php: Fixed sort actions
	of agents operation view

2012-06-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/net_tools.php: cleaned source code style.
	
	* extensions/module_groups.php,
	operation/agentes/status_monitor.php: fixed the lost "module group"
	"unasigned".
	
	Fixes: #3532075

2012-06-20  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php