@@ -66,11 +66,17 @@ function get_user_key ($settings) {
 		}
 		
 		global $config;
-		
+	
+
+		/* html_debug_print ("DEBUG: Trying to execute escapeshellcmd ($settings->keygen_path".
+                        ' '.$settings->customer_key.' '.$config['dbhost'].
+                        ' '.$config['dbuser'].' '.$config['dbpass'].
+                        ' '.$config['dbname'], true); */
+	
 		$user_key = exec (escapeshellcmd ($settings->keygen_path.
 			' '.$settings->customer_key.' '.$config['dbhost'].
 			' '.$config['dbuser'].' '.$config['dbpass'].
-			' '.$config['dbname']));
+			' '.$config['dbname'].' '.$config["dbtype"]));
 		
 		return $user_key;
 	}
